2006-06-06  Carlos Garnacho <carlosg@gnome.org>

	* Release 1.9.0

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am, Init/Makefile.am, Network/Makefile.am,
	Shares/Makefile.am, Time/Makefile.am, Users/Makefile.am,
	Utils/Makefile.am: distcheck fixes

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (change_user_chfn): specify which user to modify.
	(add_user): remove a stray apostrophe.
	* Users/Groups.pm (change_group): get the correct state for the users

2006-06-05  Carlos Garnacho  <carlosg@gnome.org>

	* HostsConfig.pm: uncomment some needed code.
	* Network/Hosts.pm: fix a couple of code typos.
	* IfacesConfig.pm, Network/Ifaces.pm: get/set "auto"
	* Init/Services.pm (set_sysv_service): fix a typo that made links to
	be erased/recreated, remove links for ignored services.

2006-06-01  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Replace.pm (set_init_bool): inverse logic to allow values != 1
	to be TRUE.
	* Shares/SMB.pm (get): initialize $smb_conf_file before actually using
	it.

2006-05-30  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Hosts.pm (run_hostname), (get_fqdn_replace_table)
	(ensure_hostname): added
	(set_fqdn): use get_fqdn_replace_table().
	(set_hosts), (get_hosts): renamed, former get() and set()
	(set_hosts): ensure that if hostname changes /etc/hosts file reflects
	this too.
	* HostsConfig.pm: ensure that the set() Dbus message format contains
	hostname and domainname

2006-05-30  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (interface_configured): fix a typo with plip
	interfaces.
	(bootproto_to_code): new function, gets a numeric code according to
	the bootproto.
	(get): use this function
	(set): set bootproto accordingly

2006-05-29  Carlos Garnacho  <carlosg@gnome.org>

	* files/general_isdn_ppp_options: do not load plugin userpass. Fixes
	GNOME bug #319553
	* Init/ServicesList.pm: add a missing comma

2006-05-29  Joe Marcus Clarke  <marcus@freebsd.org>
